Updates to SOBH section

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -2038,3 +2038,17 @@
   howpublished = {\url{http://www.virgo.infn.it/}}
 }
 
+@article{Baird+2013,
+    title = {Degeneracy between mass and spin in black-hole-binary waveforms},
+    author = {Baird, Emily and Fairhurst, Stephen and Hannam, Mark and Murphy, Patricia},
+    journal = {Phys. Rev. D},
+    volume = {87},
+    issue = {2},
+    pages = {024035},
+    numpages = {12},
+    year = {2013},
+    month = {Jan},
+    publisher = {American Physical Society},
+    doi = {10.1103/PhysRevD.87.024035},
+    url = {http://link.aps.org/doi/10.1103/PhysRevD.87.024035}
+}
